[package]
name = "template-master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "tempmaster"
path = "src/main.rs"

[dependencies]
assert_cmd = "2.0.10"
assert_fs = "1.0.12"
clap = { version = "4.2.1", features = ["derive"] }
dirs = "5.0.0"
fs_extra = "1.3.0"
predicates = "3.0.2"
toml = "0.7.3"
